--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -95,24 +95,24 @@ html, html[data-theme="light"] {
   --base0f: #ff5370; // Deprecated, Opening/Closing Embedded Language Tags e.g.
 }
 
-// Supernova Theme
+// Seti UI Theme
 html[data-theme="dark"] {
-  --base00: #373e47; // Default Background
-  --base01: #444c56; // Lighter Background (Used for status bars, line number and folding marks)
-  --base02: #545d68; // Selection Background
-  --base03: #909dab; // Comments, Invisible, Line Highlighting
-  --base04: #adbac7; // Dark Foreground (Used for status bars)
-  --base05: #cdd9e5; // Default Foreground, Caret, Delimiters, Operators
-  --base06: #e7f3f4; // Light Foreground (Not often used)
+  --base00: #151718; // Default Background
+  --base01: #282a2b; // Lighter Background (Used for status bars, line number and folding marks)
+  --base02: #3B758C; // Selection Background
+  --base03: #41535B; // Comments, Invisible, Line Highlighting
+  --base04: #43a5d5; // Dark Foreground (Used for status bars)
+  --base05: #d6d6d6; // Default Foreground, Caret, Delimiters, Operators
+  --base06: #eeeeee; // Light Foreground (Not often used)
   --base07: #ffffff; // Light Background (Not often used)
-  --base08: #d40059; // Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
-  --base09: #ff5c00; // Integers, Boolean, Constants, XML Attributes, Markup Link Url
-  --base0a: #d9b600; // Classes, Markup Bold, Search Text Background
-  --base0b: #6bac00; // Strings, Inherited Class, Markup Code, Diff Inserted
-  --base0c: #00a8e0; // Support, Regular Expressions, Escape Characters, Markup Quotes
-  --base0d: #b37eff; // Functions, Methods, Attribute IDs, Headings
-  --base0e: #00af9e; // Keywords, Storage, Selector, Markup Italic, Diff Changed
-  --base0f: #ff66c2; // Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
+  --base08: #Cd3f45; // Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
+  --base09: #db7b55; // Integers, Boolean, Constants, XML Attributes, Markup Link Url
+  --base0a: #e6cd69; // Classes, Markup Bold, Search Text Background
+  --base0b: #9fca56; // Strings, Inherited Class, Markup Code, Diff Inserted
+  --base0c: #55dbbe; // Support, Regular Expressions, Escape Characters, Markup Quotes
+  --base0d: #55b5db; // Functions, Methods, Attribute IDs, Headings
+  --base0e: #a074c4; // Keywords, Storage, Selector, Markup Italic, Diff Changed
+  --base0f: #8a553f; // Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
 }
 
 // Monokai Theme
